# Warlight-AI-Challenge-2-Bot

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md  deploy.sh
deploy/: deploy.sh  requestFooter  requestHeader
deploy/versions/v1-phase1/: README.md
deploy/versions/v2-phase2/: README.md
deploy/versions/v3-phase3/: README.md
include/: StringManipulation.h  consts.h  globals.h  globals.hpp  settings.h  stringmanipulation.hpp  utils.h  utils.hpp
src/: Bot.cpp  Bot.h  Bot.hpp  CMakeLists.txt  Parser.cpp  Parser.h  Parser.hpp  Region.cpp  Region.h  Region.hpp  Settings.h  SuperRegion.cpp  SuperRegion.h  World.cpp  World.h  World.hpp  bot.cpp  bot.hpp  main.cpp  main.h  parser.cpp  parser.hpp  region.cpp  region.hpp  superregion.cpp  superregion.hpp  world.cpp  world.hpp
src/basic-strategies/: BasicPickStrategy.cpp  BasicPickStrategy.h  PickStrategy.cpp  PickStrategy.h  RoundStrategy.cpp  RoundStrategy.h
src/basic-strategies/common/: ScoreComputer.h
src/strategies/: BasicPickStrategy.cpp  BasicPickStrategy.hpp  BasicRoundStrategy.cpp  BasicRoundStrategy.h  BasicRoundStrategy.hpp  CMakeLists.txt  GreedyRoundStrategy.cpp  GreedyRoundStrategy.h  GreedyRoundStrategy.hpp  PickStrategy.cpp  PickStrategy.h  PickStrategy.hpp  QuickPickStrategy.cpp  QuickPickStrategy.h  QuickPickStrategy.hpp  RoundStrategy.cpp  RoundStrategy.h  RoundStrategy.hpp  basicpickstrategy.cpp  basicpickstrategy.hpp  basicroundstrategy.cpp  basicroundstrategy.hpp  greedyroundstrategy.cpp  greedyroundstrategy.hpp  pickstrategy.cpp  pickstrategy.hpp  quickpickstrategy.cpp  quickpickstrategy.hpp  roundstrategy.cpp  roundstrategy.hpp  weightedpickstrategy.cpp  weightedpickstrategy.hpp
src/strategies/common/: ScoreComputer.h  ScoreComputer.hpp  Statistics.hpp  basicscore.hpp  statistics.hpp
test/: CMakeLists.txt  dummy.cpp  pq_pair.cpp  rez
test/inputs/: game.game
